--- a/scss/_estilos.scss
+++ b/scss/_estilos.scss
@@ -64,7 +64,7 @@ input {
     outline: none;
     margin-bottom: 1rem;
     &:focus {
-    box-shadow: 0rem 0rem 0.6rem 0.1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0rem 0rem 0.8rem 0.5rem rgba(0, 0, 0, 0.2);
     }
 }
 
@@ -84,4 +84,10 @@ h1{
 
 div{
     margin-bottom: 2rem;
+}
+
+.tosti{
+    background: rgb(180,33,33);
+    background: linear-gradient(0deg, rgba(180,33,33,1) 0%, rgba(99,18,18,1) 100%);
+    border-radius: 0.8rem;
 }
